Minor revision BE 101

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -23,13 +23,13 @@
     "\n",
     "| Method | Purpose | Typical Use Case |\n",
     "| :--- | :--- | :--- |\n",
-    "| [.from_array(arr)](../../../reference/Block%20Encodings/methods/from_array.rst) | Encodes a NumPy matrix | Quick prototyping of small, specific matrices. |\n",
-    "| [.from_operator(op)](../../../reference/Block%20Encodings/methods/from_operator.rst) | Encodes a Hamiltonian | Physics and Chemistry simulations. |\n",
-    "| [.from_lcu(coeffs, unitaries)](../../../reference/Block%20Encodings/methods/from_lcu.rst) | Custom weighted sum of unitaries | High-efficiency hardware implementation. |\n",
-    "| [.resources(qv)](../../../reference/Block%20Encodings/methods/resources.rst) | Estimates gate counts and depth | Resource analysis and benchmarking. |\n",
-    "| [.apply(qv)](../../../reference/Block%20Encodings/methods/apply.rst) | Applies a matrix to a quantum state | NISQ hardware with manual post-selection. |\n",
-    "| [.apply_rus(prep_func)](../../../reference/Block%20Encodings/methods/apply_rus.rst) | Applies a matrix to a quantum state | Fault-tolerant / Repeat-Until-Success logic. |\n",
-    "| ``+``, ``-``, ``*``, ``@``, ``.kron()`` | Algebraic arithmetic on encodings | Constructing complex composite systems. |\n",
+    "| [.from_array(arr)](../../../reference/Block%20Encodings/methods/from_array.rst) | Encodes a NumPy matrix | Quick prototyping of small, specific matrices |\n",
+    "| [.from_operator(op)](../../../reference/Block%20Encodings/methods/from_operator.rst) | Encodes a Hamiltonian | Physics and Chemistry simulations |\n",
+    "| [.from_lcu(coeffs, unitaries)](../../../reference/Block%20Encodings/methods/from_lcu.rst) | Custom weighted sum of unitaries | High-efficiency implementation |\n",
+    "| [.resources(qv)](../../../reference/Block%20Encodings/methods/resources.rst) | Estimates gate counts, depth, qubits. | Resource analysis and benchmarking |\n",
+    "| [.apply(qv)](../../../reference/Block%20Encodings/methods/apply.rst) | Applies a matrix to a quantum state | NISQ hardware with manual post-selection |\n",
+    "| [.apply_rus(prep_func)](../../../reference/Block%20Encodings/methods/apply_rus.rst) | Applies a matrix to a quantum state | Fault-tolerant / Repeat-Until-Success logic |\n",
+    "| ``+``, ``-``, ``*``, ``@``, ``.kron()`` | Algebraic arithmetic on encodings | Constructing complex composite systems |\n",
     "\n",
     "Once all these concepts become second nature, we'll build on them in the next tutorial, applying them for performing arbitrary polynomial transformations, solving linear systems, and Hamiltonian simulation. All by using methods of the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class. Clean. Intuitive. Qrisp.\n",
     "\n",
@@ -43,7 +43,7 @@
    "id": "8215b59c",
    "metadata": {},
    "source": [
-    "## What are block-encodings?\n",
+    "## What are block encodings?\n",
     "Block encoding is a foundational technique that allows a quantum computer to represent a general matrix $A$ (where $\\|A\\|\\leq1$) as the top-left block of a larger unitary matrix $U$.\n",
     "\n",
     ":::{note}\n",
@@ -62,7 +62,7 @@
     "- $\\ket{G}$ (Signal State): Often called the \"ancilla state,\" this is a specific basis state (typically $\\ket{0}^{\\otimes m}$) that defines the subspace where $A$ is embedded.\n",
     "\n",
     "Visually, we essentially put a scaled, non-unitary matrix in the top-left block of a larger unitary matrix:\n",
-    "$$U = \\begin{pmatrix}\\frac{A}{\\alpha} & * \\\\ * & * \\end{pmatrix}$$\n",
+    "$$U = \\begin{pmatrix}\\dfrac{A}{\\alpha} & * \\\\ * & * \\end{pmatrix}$$\n",
     "By preparing the ancillas in state $\\ket{G}$ and then projecting back onto $\\bra{G}$ after applying $U$, we \"isolate\" the action of $A$ on our target system.\n",
     "\n",
     "In Qrisp, we can construct a block encoding in four ways:\n",
@@ -73,11 +73,11 @@
     "\n",
     "- [.from_lcu](../../../reference/Block%20Encodings/methods/from_lcu.rst) constructs a BlockEncoding using the Linear Combination of Unitaries approach,\n",
     "\n",
-    "- Direct construction via the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class constructor allows you to manually define a new encoding by specifying a ``new_alpha``, ``new_anc_templates``, and a ``new_unitary`` function and returning ``BlockEncoding(new_alpha, new_anc_templates, new_unitary, num_ops=self.num_ops)``.\n",
+    "- Direct construction via the [BlockEncoding](../../../reference/Block%20Encodings/BlockEncoding.rst) class constructor allows you to manually define a new encoding by specifying the normalization factor ``alpha``, ``ancillas`` (as [QuantumVariables](../../../reference/Core/QuantumVariable.rst)), and a ``unitary`` function, and returning ``BlockEncoding(alpha, ancillas, unitary)``.\n",
     "\n",
     "The first three options are rather self-explanatory, really... You (the user) provide the matrix and/or Hamiltonian you'd like to block encode, or, alternatively, the list of unitaries with the corresponding list of coefficients, invoke the appropriate method for your desired input and, whoosh, Qrisp block encodes it for ya.\n",
     "\n",
-    "the Direct construction method is the route for academic with state-of-the-art custom block encodings up their sleeves, catered to the researchers that would like to implement their custom block encodings (and hopefully add them as methods for this class).\n",
+    "The Direct construction method is the route for academics with state-of-the-art custom block encodings up their sleeves, catered to the researchers that would like to implement their custom block encodings (and hopefully add them as methods for this class).\n",
     "\n",
     "Without getting ahead of ourselves, let's first showcase the ready-to-go methods:"
    ]
@@ -319,7 +319,7 @@
     "\n",
     "The negative sign matches the chosen finite-difference convention.\n",
     "\n",
-    "This decomposition fits naturally into the LCU framework, because $\\mathbb{I}$, $V$, and $V^\\dagger$ are themselves unitaries, afterall:$$\\Delta=\\sum_{i=0}^2\\alpha_i U_i\\propto 2\\mathbb{I}+V+V^\\dagger$$\n",
+    "This decomposition fits naturally into the LCU framework, because $\\mathbb{I}$, $V$, and $V^\\dagger$ are themselves unitaries, afterall:$$\\Delta=\\sum_{i=0}^2\\alpha_i U_i\\propto 2\\mathbb{I}-V-V^\\dagger$$\n",
     "\n",
     "This can be easily implemented in Qrisp with the [built-in arithmetic](../../../reference/Quantum%20Types/QuantumFloat.rst) it allows:"
    ]
@@ -588,11 +588,10 @@
    "id": "a5012b2a",
    "metadata": {},
    "source": [
-    "A few things to note here. We pass the operand (the state we have prepared and want to apply the operator to) as a function, as oppossed as a [QuantumVariable](../../../reference/Core/QuantumVariable.rst). The second difference is the way we obtain the BlockEncoding and apply the [.apply_rus](../../../reference/Block%20Encodings/methods/apply_rus.rst), which is within a main function. This is because we use the [Jasp](../../../reference/Jasp/index.rst) compilation pipeline, which allows us to avoid the pythonic compilation bottleneck. You can learn more bout it in the Jasp tutorial.\n",
+    "A few things to note here. We pass the operand (the state we have prepared and want to apply the operator to) as a function, as oppossed as a [QuantumVariable](../../../reference/Core/QuantumVariable.rst). The second difference is the way we obtain the BlockEncoding and apply the [.apply_rus](../../../reference/Block%20Encodings/methods/apply_rus.rst), which is within a main function. This is because we use the [Jasp](../../../reference/Jasp/index.rst) compilation pipeline, which allows us to avoid the pythonic compilation bottleneck. You can learn more about it in the Jasp tutorial.\n",
     "\n",
-    "Next, we invoke the [@terminal_sampling](../../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator. Simply put, this decorator tells the compiler to efficiently simulate and sample the final measurement distribution of our quantum program. Instead of manually writing a classical loop to execute the circuit and gather measurement statistics, [@terminal_sampling](../../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) automatically handles the heavy lifting of sampling this probability multiple times.\n",
-    "\n",
-    "In the end, we obtain a result that is consistent when repeating the simulation. This is also observed in the variance. We essentially obtain the correct solution all the time with the variance not depending on the amount of shots. How neat is that?!\n",
+    "Next, we invoke the [@terminal_sampling](../../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) decorator. Simply put, this decorator tells the compiler to simulate the quantum program using our fast state vector simulator and sample the final measurement distribution. Instead of manually writing a classical loop to execute the program repeatedly and gather measurement statistics, [@terminal_sampling](../../../reference/Jasp/Simulation%20Tools/Terminal%20Sampling.rst) automatically handles the heavy lifting of sampling this probability.\n",
+    "In the end, we obtain a result that is consistent when repeating the simulation. \n",
     "\n",
     "Before delving into the final section of this tutorial, let's quickly recap. The [.apply](../../../reference/Block%20Encodings/methods/apply.rst) allows you to use block encodings on today's NISQ hardware, or if you’re running on a state vector simulator and don't want the overhead of the RUS loop logic.\n",
     "\n",
@@ -665,7 +664,7 @@
     "\n",
     "# Perform arithmetic: 2.5 * A - B\n",
     "# Qrisp handles the LCU logic and the Z-gate for the sign flip automatically\n",
-    "# In practice: use BlockEncoding.from_operator(2.5 * X(0) * X(1) - Z(0) * Z(1))\n",
+    "# In practice, use BlockEncoding.from_operator(2.5 * X(0) * X(1) - Z(0) * Z(1))\n",
     "H_total = 2.5 * A - B\n",
     "\n",
     "def prep_zeros():\n",
