Minor revision BE 201

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -38,13 +38,13 @@
     "## Qubitization\n",
     "If a Block Encoding is a \"static snapshot\" of a matrix $A$, Qubitization is what makes it \"move\". Technically, Qubitization is a method to transform an $(\\alpha, m, \\epsilon)$-block-encoding of a matrix $A$ into a special unitary operator $W$, often referred to as the \"walk operator\". This operator has a nice property: it maps the eigenvalues $\\lambda$ of $A$ to the eigenvalues $e^{\\pm i \\arccos(\\lambda/\\alpha)}$ in a set of two-dimensional invariant subspaces. \n",
     "\n",
-    "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{1}_a)\\otimes \\mathbb{1}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = U\\cdot R$.\n",
+    "Given a Hermitian matrix $H$ and its block-encoding $(U, G)$, where $G\\ket{0} = \\ket{G}$, we use the definition of the reflection operator $R$ acting on the ancilla space as $R = (2\\ket{G}\\bra{G}_a \\otimes \\mathbb{I}_a)\\otimes \\mathbb{I}_{s}$ from [Lemma 1 in Exact and efficient Lanczos method on a quantum computer](https://arxiv.org/pdf/2208.00567). To \"qubitize\" the encoding, we interleave the SELECT operator with this reflection. The Qubitized Walk Operator $W$ is defined as $W = U\\cdot R$.\n",
     "\n",
-    "Rigorous analysis (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)) shows that if $\\ket{\\psi_\\lambda}$ is an eigenvector of $H/\\alpha$ with eigenvalue $\\lambda \\in [-1, 1]$, the walk operator $W$ doesn't wander through the whole Hilbert space. Instead, it acts on an invariant 2D subspace spanned by the \"ideal\" state $\\ket{G}\\ket{\\psi_\\lambda}$ and its orthogonal complement $\\ket{\\perp}$ (a very high dimensional vector space, and not a single vector). Within this subspace, the eigenvalues of $W$ are $\\mu_\\pm = \\lambda \\pm i\\sqrt{1-\\lambda^2} = e^{\\pm i \\arccos(\\lambda)}$. Essentially, Qubitization \"lifts\" the eigenvalues of our matrix onto the unit circle in the complex plane, allowing us to manipulate them using phase rotations.\n",
+    "Rigorous analysis (see [Lin Lin, Chapter 8](https://arxiv.org/pdf/2201.08309)) shows that if $\\ket{\\psi_\\lambda}$ is an eigenvector of $H/\\alpha$ with eigenvalue $\\lambda \\in [-1, 1]$, the walk operator $W$ doesn't wander through the whole Hilbert space. Instead, it acts on an invariant 2D subspace spanned by the \"ideal\" state $\\ket{G}\\ket{\\psi_\\lambda}$ and an orthogonal state. Within this subspace, the eigenvalues of $W$ are $\\mu_\\pm = \\lambda \\pm i\\sqrt{1-\\lambda^2} = e^{\\pm i \\arccos(\\lambda)}$. Essentially, Qubitization \"lifts\" the eigenvalues of our matrix onto the unit circle in the complex plane, allowing us to manipulate them using phase rotations.\n",
     "\n",
     "This seems like a mouthful, but in order for this tutorial to cater to both developers coming from the classical domain, as well as researchers in quantum computing, it's the \"necessary evil\". To make it up to you, we're going to show how in Qrisp, you don't need to build these reflections manually. But first, some visual aid so that you see that it's not as complex as it sounds.\n",
     "\n",
-    "![Alt text](qubitization.png)\n",
+    "![Qubitization](qubitization.png)\n",
     "\n",
     "In the previous tutorial you've already learned how we use the $\\text{SELECT}$ by just calling [q_switch](../../../reference/Primitives/qswitch.rst). Well, what if we told you that performing the reflection operation above you can just use the [reflection](../../../reference/Primitives/reflection.rst) function? And by combining the two you can easily define the qubitization walk operator? Yup, that's the cool thing about modular software development approach Qrisp is taking with its focus on high-level abstractions. Let's get to coding!\n",
     "\n",
@@ -89,10 +89,10 @@
     "\n",
     "## Block encoding Chebyshev polynomials\n",
     "One of the most powerful features of Qubitization is its natural relationship with Chebyshev polynomials of the first kind, $T_k(x)$, defined as $T_k(\\cos \\theta) = \\cos(k\\theta)$. If we apply the walk operator $W$ $k$-times, the resulting unitary $W^k$ contains $T_k(A/\\alpha)$ block encoded in the top-left block:\n",
-    "$$(\\bra{G} \\otimes \\mathbb{1}) W^k (\\ket{G} \\otimes \\mathbb{1}) = T_k(A/\\alpha).$$\n",
+    "$$(\\bra{G} \\otimes \\mathbb{I}) W^k (\\ket{G} \\otimes \\mathbb{I}) = T_k(A/\\alpha).$$\n",
     "\n",
     "This is kind of resembling by how we defined our typical block encoding business. To freshen the memory, this is how we have defined block encoding in the previous tutorial:\n",
-    "$$(\\bra{G} \\otimes \\mathbb{1}) U (\\ket{G} \\otimes \\mathbb{1}) = A/\\alpha.$$\n",
+    "$$(\\bra{G} \\otimes \\mathbb{I}) U (\\ket{G} \\otimes \\mathbb{I}) = A/\\alpha.$$\n",
     "We just replaced $U$ with $W^k$. I'm still in awe about how this holds true - it cannot be this simple, right?! Well, based on the theory backing it, it is. Awesome!\n",
     "\n",
     "You might notice the term $A/\\alpha$ and wonder where this scaling comes from. In any block encoding, we are embedding a non-unitary matrix $A$ into a larger unitary $U$. Since the eigenvalues of a unitary must lie on the unit circle (norm 1), and the spectral norm of our matrix $A$ might be much larger, we must scale $A$ down.\n",
@@ -105,9 +105,9 @@
     "\n",
     "- Approximation Theory: According to the [Chebyshev Equioscillation Theorem](https://en.wikipedia.org/wiki/Equioscillation_theorem), $T_k(x)$ provides the best uniform approximation to a function over the interval $[-1, 1]$. This ensures that our quantum algorithm achieves the desired precision $\\epsilon$ with the minimum possible quantum resources.\n",
     "\n",
-    "we think that, again, some visual aid is needed. By applying the walk operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k(H)$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
+    "We think that, again, some visual aid is needed. By applying the walk operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k(H)$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
     "\n",
-    "![Alt text](cheb_poly.png)\n",
+    "![Chebyshev](cheb_poly.png)\n",
     "\n",
     "Just as with the basic walk operator, Qrisp abstracts the iterative application of $W$ into a simple method call. The [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) provides a [.chebyshev(k)](../../../reference/Block%20Encodings/methods/chebyshev.rst) method, which returns a new block encoding for the $k$-th Chebyshev polynomial $T_k$. This handles the construction of $W^k$ (or the appropriate sequence of reflections and select/[q_switch](../../../reference/Primitives/qswitch.rst) operators) internally.\n",
     "\n",
@@ -192,7 +192,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for k in range(1, 8):\n",
+    "for k in range(1, 5):\n",
     "    qv = operand_prep()\n",
     "    # Generate the k-th Chebyshev Block Encoding\n",
     "    # We use rescale=False to look at the raw complexity of the walk operator iterations\n",
@@ -301,7 +301,7 @@
     "\n",
     "Visually, this is represented by the domains highlighted in light blue in the following figure:\n",
     "\n",
-    "![Alt text](inverse.png)\n",
+    "![Inverse](inverse.png)\n",
     "\n",
     "The algorithm constructs a block-encoding of the inverse operator:\n",
     "$$A^{-1} \\propto \\sum_{j=0}^{j_0} \\alpha_{2j+1} T_{2j+1}(A),$$\n",
@@ -309,7 +309,7 @@
     "\n",
     "For the visual learners, here is the circuit schematic for this underlying implementation (you can simply call, as seen in the example below, with the [CKS](../../../reference/Algorithms/CKS.rst) function).\n",
     "\n",
-    "![Alt text](BE_CKS.png)\n",
+    "![CKS](BE_CKS.png)\n",
     "\n",
     "The [unary encoding](https://en.wikipedia.org/wiki/Unary_coding) trick is a neat one, that's for sure. It constructs a unary state (instead of the usual $\\text{PREP}$ in binary encoding that we use in usual LCU). By restructuring the superposition into a unary format, it bypasses the need for complex multi-controlled operations, such as our qrispy [q_switch](../../../reference/Primitives/qswitch.rst), and instead relies entirely on single-qubit controls.\n",
     "\n",
@@ -330,7 +330,7 @@
     "\n",
     "Here is the \"figure below\" promised above:\n",
     "\n",
-    "![Alt text](unary_magic.png)\n",
+    "![Unary](unary_magic.png)\n",
     "\n",
     "Since the first $(RU)$ is always triggered, we can basically remove the control on that one. The Qrisp implementation does just that.\n",
     "\n",
@@ -481,9 +481,9 @@
     "$$U_\\Phi = e^{i\\phi_1(2\\Pi - I)} U e^{i\\phi_2(2\\Pi - I)} U^\\dagger e^{i\\phi_3(2\\Pi - I)} U \\dots.$$\n",
     "To visualize this, the following circuit schematics can help.\n",
     "\n",
-    "![Alt text](BE_QSVT.png)\n",
+    "![QSVT](BE_QSVT.png)\n",
     "\n",
-    "You might be saying to yourself: \"The picture is confusing to me. In the formula for $U_\\Phi$ only $U$ and $\\Pi$ appear, but at no point $\\ket{b}$, or $\\ket{G}$?!\". What a great question you brewed there! The answer might suprise you, but it's mostly the notation used in literature. In the algorithm schematics above we have explicitly shown the $\\ket{G}$ and $\\bra{G}$ parts sandwiching $U$. In literature, it is often assumed, that this trio of unitaries collectively is labeled as $U$: $U\\rightarrow (\\bra{G}\\otimes \\mathbb{I})U(\\ket{G}\\otimes \\mathbb{I})$. As for the state $\\ket{b}$, this is just our operand we're applying the QSVT to.\n",
+    "You might be saying to yourself: \"The picture is confusing to me. In the formula for $U_\\Phi$ only $U$ and $\\Pi$ appear, but at no point $\\ket{G}$?!\". What a great question you brewed there! The answer might suprise you, but it's mostly the notation used in literature. In the algorithm schematics above we have explicitly shown the $\\ket{G}$ and $\\bra{G}$ parts sandwiching $U$. In literature, it is often assumed, that these unitaries are collectively labeled as $U$: $U\\rightarrow (\\bra{G}\\otimes \\mathbb{I})U(\\ket{G}\\otimes \\mathbb{I})$.\n",
     "\n",
     "As promised above, you don't even need to care about these angles with our crispy clean implementation. Generalizing QSP is the final piece of this mosaic.\n",
     "\n",
@@ -500,11 +500,11 @@
     "\n",
     "Why does this generalization matter so much? It allows for mixed parity polynomial, resulting in you being to implement functions like $e^{-iAt}$ directly without splitting them into sine (odd) and cosine (even) components.\n",
     "\n",
-    "Apart from that, finding precise phase factors for standard QSP/QSVT used to be challenging. In the Generalized (GQSP) framework, phases can be computed efficiently (see [Laneve](https://arxiv.org/abs/2503.03026), [Ni et al.](https://arxiv.org/pdf/2505.12615)) in time $\\mathcal O(d\\log(d))$, making it significantly more practical. (Of course this is already integrated in Qrisp, such that you don't have to care about these phases.)\n",
+    "Apart from that, finding precise phase factors for standard QSP/QSVT relied on specialized libaries like [QSPPACK](https://qsppack.gitbook.io/qsppack) or [pyqsp](https://github.com/ichuang/pyqsp) to handle the underlying numerical optimization. In the Generalized (GQSP) framework, phases can be computed efficiently (see [Laneve](https://arxiv.org/abs/2503.03026), [Ni et al.](https://arxiv.org/pdf/2505.12615)) in time $\\mathcal O(d\\log(d))$, making it more accessible. (Of course this is already integrated in Qrisp, such that you don't have to care about these phases.)\n",
     "\n",
     "The structure of GQSP is shown in the following schematics:\n",
     "\n",
-    "![Alt text](GQSP.png)\n",
+    "![GQSP](GQSP.png)\n",
     "\n",
     "Ok, enough of this, let's now show how you can use, run, simulate, and provide resource analysis for three GQSP based applications."
    ]
@@ -643,7 +643,7 @@
    "source": [
     "Uhm, that's surprising on two accounts?! Firstly, the resources for this seem enormous? And, again, this is expected, because we're (still) trying to invert a dense matrix (same as above). As already mentioned, the exponential quantum speedup comes for some specific, sparse, matrices - this means that they have only a small amount of entries, with all the rest being zero. Remember the Laplacian from the previous tutorial - it's mostly zeroes. \n",
     "\n",
-    "The second surprise is that gate counts and depth are **almost exactly the same**?! This stems from both having **almost exactly the same** structure of the algorithm (when Qrisp optimizations of the CKS circuit visualized above come into play). The only difference is the amount of qubits! This is also easily explainable: while CKS needs 14 auxiliary qubits (which is understandeable since we're approximating the polynomial of the degree 25: $T_25$, which corresponds to 13 odd terms, which also the code above shows (12+1=13)), QET (which leverages the fact of having parity polynomials, resulting in a more efficient circuit) requires **only one**.  Let's check also the quality of the solutions of [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) and compare to those obtained with CKS:"
+    "The second surprise is that gate counts and depth are **almost exactly the same**?! This stems from both having **almost exactly the same** structure of the algorithm (when Qrisp optimizations of the CKS circuit visualized above come into play). The only difference is the amount of qubits! This is also easily explainable: while CKS needs 14 auxiliary qubits (which is understandeable since we're approximating the polynomial of the degree 25: $T_{25}$, which corresponds to 13 odd terms, which also the code above shows (12+1=13)), QET (which leverages the fact of having parity polynomials, resulting in a more efficient circuit) requires **only one**.  Let's check also the quality of the solutions of [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst) and compare to those obtained with CKS:"
    ]
   },
   {
