Fixed link to BE tutorial; added link from GQSP filtering to BE tutorial

--- a/documentation/source/general/tutorial/GQSP_filtering.ipynb
+++ b/documentation/source/general/tutorial/GQSP_filtering.ipynb
@@ -326,7 +326,8 @@
     "\n",
     "### 3.1 Introduction to Block-Encodings and GQSP\n",
     "\n",
-    "Let us recall the notion of a block-encoding:\n",
+    "If you have never heard of block-encodigs before, we recommend this [tutorial](https://www.qrisp.eu/general/tutorial/BE_tutorial/index.html). \n",
+    "Otherwise, let us recall the notion of a block-encoding:\n",
     "\n",
     "Block-encoding is a foundational technique that enables the implementation of non-unitary operations on a quantum computer by embedding them into a larger unitary operator.\n",
     "Consider a normalized Pauli operator $H=\\sum_i\\alpha_iP_i$ where $\\alpha_i>0$ are real coefficients such that $\\sum_i|\\alpha_i|=1$, and $P_i$ are Pauli strings acting on $n$ qubits (including their respective signs).\n",
