BE_tutorial fixes

--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol1.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "6fcbefbd",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "21d826f5",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "bd950291",
    "metadata": {},
    "outputs": [],
@@ -224,10 +224,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "657c957a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.]\n",
+      " [-1.  2. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0. -1.  2. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0. -1.  2. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0. -1.  2. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0. -1.  2. -1.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0. -1.  2. -1.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0. -1.  2. -1.  0.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0. -1.  2. -1.  0.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0. -1.  2. -1.  0.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0. -1.  2. -1.  0.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.  2. -1.  0.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.  2. -1.  0.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.  2. -1.  0.]\n",
+      " [ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.  2. -1.]\n",
+      " [-1.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0. -1.  2.]]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -252,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "545b2832",
    "metadata": {},
    "outputs": [],
@@ -288,10 +311,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2de958a2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'t': 48, 'gphase': 2, 'cy': 14, 'x': 15, 'u3': 30, 'p': 7, 'h': 32, 't_dg': 64, 'cx': 156}, 'depth': 220, 'qubits': 12}\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import QuantumFloat\n",
     "\n",
@@ -326,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fedc47d3",
    "metadata": {},
    "outputs": [],
@@ -358,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "5dc2a98b",
    "metadata": {},
    "outputs": [],
@@ -379,10 +410,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "3211ebcd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'s': 6, 't': 18, 'gphase': 2, 'x': 5, 'u3': 6, 'p': 2, 'h': 22, 't_dg': 20, 'cx': 72, 'measure': 6}, 'depth': 60, 'qubits': 11}\n"
+     ]
+    }
+   ],
    "source": [
     "BE = BlockEncoding.from_lcu(coeffs, unitaries)\n",
     "\n",
@@ -442,10 +481,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "61aa1e3b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
@@ -471,10 +518,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "f9145b6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.1353701  0.35887192 0.13651068 0.22305138 0.31510418 0.26655585\n",
+      " 0.31322257 0.13236592 0.13458034 0.35912836 0.13472428 0.2208684\n",
+      " 0.3110026  0.26898061 0.3128356  0.13254883]\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp.interface import QiskitBackend\n",
     "from qiskit_aer import AerSimulator\n",
@@ -504,10 +561,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "e242d614",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j\n",
+      " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j\n",
+      " 0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j\n",
+      " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j]\n",
+      "0.006017214319887434\n"
+     ]
+    }
+   ],
    "source": [
     "H_arr = H.to_array()\n",
     "\n",
@@ -548,10 +617,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a7e148cc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j                    \n",
+      " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j\n",
+      " 0.13416408+0.j 0.35777088+0.j 0.13416408+0.j 0.2236068 +0.j\n",
+      " 0.31304952+0.j 0.26832816+0.j 0.31304952+0.j 0.13416408+0.j]\n",
+      "1.1728981357395771e-07\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
@@ -649,10 +730,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "b41f3796",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "New Alpha: 3.5\n",
+      "Resulting Distribution: {3: 0.8620689475330789, 0: 0.13793105246692108}         \n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
@@ -689,10 +779,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "72199b60",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'z': 4, 'x': 4}, 'depth': 2, 'qubits': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
