--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -11,9 +11,9 @@
     "\n",
     "Often, we want to compute functions of that matrix; like $e^{-iAt}$ for simulating dynamics (Hamiltonians), or $A^{-1}$ for solving linear systems, or even applying step functions or Gaussian functions as a filter for ground-state preparation. \n",
     "\n",
-    "Classically, to evaluate a complex function $f(x)$, we often approximate $f$ using a polynomial—such as a Taylor series or Chebyshev expansion over a specific domain. In quantum computing, we can perform a similar functional transformation using [Quantum Signal Processing (QSP)](https://dspace.mit.edu/handle/1721.1/115025), which allows us to apply polynomial transformations to the eigenvalues of a quantum operator. We will cover QSP toward the end of this tutorial. To get there, we first need to learn how to use the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) to transform an operator into a \"Quantum Walk\" via Qubitization.\n",
+    "Classically, to evaluate a complex function $f(x)$, we often approximate $f$ using a polynomial, such as a Taylor series or Chebyshev expansion over a specific domain. In quantum computing, we can perform a similar functional transformation using [Quantum Signal Processing (QSP)](https://dspace.mit.edu/handle/1721.1/115025), which allows us to apply polynomial transformations to the eigenvalues of a quantum operator. We will cover QSP toward the end of this tutorial. To get there, we first need to learn how to use the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) to transform an operator into a \"Quantum Walk\" via Qubitization.\n",
     "\n",
-    "After learning about Qubitization, this tutorial will also explain how to block-encode [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials) and why they are useful. Namely, we'll cover the [quantum Lanczos method](https://quantum-journal.org/papers/q-2023-05-23-1018/pdf/), a technique that uses the Krylov subspace (built from Chebyshev polynomials) to estimate the ground state energy of a Hamiltonian without needing complex time-evolution. We will also cover the [Childs-Kothari-Somma (CKS) algorithm](https://arxiv.org/pdf/1511.02306), which is a near-optimal linear system solver that uses block encoded Chebyshev polynomials in another layer of LCU, this time with a neat (spoiler alert: unary encoding) trick.\n",
+    "After learning about Qubitization, this tutorial will also explain how to block-encode [Chebyshev polynomials](https://en.wikipedia.org/wiki/Chebyshev_polynomials) and why they are useful. Namely, we'll cover the [quantum Lanczos method](https://quantum-journal.org/papers/q-2023-05-23-1018/pdf/), a technique that uses the Krylov subspace (built from Chebyshev polynomials) to estimate the ground state energy of a Hamiltonian without needing complex time-evolution. We will also cover the [Childs-Kothari-Somma (CKS) algorithm](https://arxiv.org/pdf/1511.02306), which is a near-optimal linear system solver that uses block encoded Chebyshev polynomials in another layer of LCU, this time with a neat trick (spoiler alert, it's unary encoding).\n",
     "\n",
     "We will then show how to run the algorithms stemming from [generalized QSP](https://arxiv.org/pdf/2308.01501) in Qrisp, and how the [BlockEncoding class](../../../reference/Block%20Encodings/BlockEncoding.rst) makes polynomial transformations, solving linear systems, and hamiltonian simulation as simple as calling [.poly(coeffs)](../../../reference/Block%20Encodings/methods/poly.rst), [.inv(eps, kappa)](../../../reference/Block%20Encodings/methods/inv.rst), and [.sim(t, N)](../../../reference/Block%20Encodings/methods/sim.rst) methods respectively.\n",
     "\n",
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ebec0e6",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
     "\n",
     "- Approximation Theory: According to the [Chebyshev Equioscillation Theorem](https://en.wikipedia.org/wiki/Equioscillation_theorem), $T_k(x)$ provides the best uniform approximation to a function over the interval $[-1, 1]$. This ensures that our quantum algorithm achieves the desired precision $\\epsilon$ with the minimum possible quantum resources.\n",
     "\n",
-    "We think that, again, some visual aid is needed. By applying the walk operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k(H)$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom right figure):\n",
+    "We think that, again, some visual aid is needed. By applying the walk operator $k$ times, we block encode the $k$-th Chebyshev polynomial of the first kind $T_k$. If you apply $W^k=(RU)^k$ $k$ times, you get $T_k(H)$ block encoded. Do it once, $k=1$, you get the top left figure. Do it twice ($k=2$), you block-encode $T_2$ (top right figure). Do it $k=5$ times... yup, you guessed it (bottom figure):\n",
     "\n",
     "![Chebyshev](cheb_poly.png)\n",
     "\n",
@@ -116,10 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "341a06dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0: 0.4900000153295707, 3.0: 0.48999992592259706, 1.0: 0.010000029373916136, 2.0: 0.010000029373916136}\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
@@ -166,10 +174,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "37aa950d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'gphase': 4, 'cx': 12, 'u3': 4, 'x': 8, 'cz': 6, 'p': 2, 'rx': 2}, 'depth': 33, 'qubits': 5}\n"
+     ]
+    }
+   ],
    "source": [
     "qv = operand_prep()\n",
     "\n",
@@ -187,10 +203,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3b7698cf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "k = 1: {'gate counts': {'gphase': 3, 'cx': 4, 'z': 1, 'x': 5, 'u3': 2, 'cz': 2}, 'depth': 16, 'qubits': 4}\n",
+      "k = 2: {'gate counts': {'gphase': 6, 'cx': 8, 'z': 2, 'x': 10, 'u3': 4, 'cz': 4}, 'depth': 32, 'qubits': 4}\n",
+      "k = 3: {'gate counts': {'gphase': 9, 'cx': 12, 'z': 3, 'x': 15, 'u3': 6, 'cz': 6}, 'depth': 48, 'qubits': 4}\n",
+      "k = 4: {'gate counts': {'gphase': 12, 'cx': 16, 'z': 4, 'x': 20, 'u3': 8, 'cz': 8}, 'depth': 64, 'qubits': 4}\n"
+     ]
+    }
+   ],
    "source": [
     "for k in range(1, 5):\n",
     "    qv = operand_prep()\n",
@@ -237,10 +264,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "bc38a43f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ground state energy estimate: -2.3656648108462726                               \n",
+      "Exact Ground state energy: -2.368033988749898\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import QuantumVariable\n",
     "from qrisp.algorithms.lanczos import lanczos_alg\n",
@@ -345,10 +381,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "0835474d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                              \n",
+      " [0.02711472 0.55709853 0.53035125 0.63846188]\n",
+      "CLASSICAL SOLUTION\n",
+      " [0.02944539 0.55423278 0.53013239 0.64102936]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from qrisp import prepare, QuantumFloat\n",
@@ -410,10 +457,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "bce4e592",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'gate counts': {'gphase': 50,\n",
+       "  't_dg': 1548,\n",
+       "  'cx': 3515,\n",
+       "  'u3': 750,\n",
+       "  'x': 377,\n",
+       "  'z': 12,\n",
+       "  's': 70,\n",
+       "  'cz': 150,\n",
+       "  'ry': 2,\n",
+       "  'p': 193,\n",
+       "  's_dg': 70,\n",
+       "  'h': 890,\n",
+       "  'cy': 50,\n",
+       "  't': 1173},\n",
+       " 'depth': 5134,\n",
+       " 'qubits': 23}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "BA = BlockEncoding.from_array(A)\n",
     "BE_CKS = CKS(BA, 0.01, kappa)\n",
@@ -525,10 +605,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "3f8f1250",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                              \n",
+      " [0.02986321 0.57992489 0.62416744 0.52269524] \n",
+      "CLASSICAL SOLUTION\n",
+      " [-0.02986321  0.57992485  0.6241675   0.52269522]\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from qrisp import *\n",
@@ -582,10 +673,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "7cda9d58",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION                                                              \n",
+      " [0.02711956 0.55708115 0.53034637 0.63848089] \n",
+      "CLASSICAL SOLUTION\n",
+      " [0.02944539 0.55423278 0.53013239 0.64102936]\n"
+     ]
+    }
+   ],
    "source": [
     "# Assuming A and b are defined as above\n",
     "kappa = np.linalg.cond(A)\n",
@@ -622,10 +724,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "31af7a24",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'gate counts': {'gphase': 50, 't_dg': 1548, 'cx': 3471, 'u3': 750, 'x': 399, 's': 48, 'cz': 150, 'p': 149, 's_dg': 48, 'h': 846, 'cy': 50, 't': 1173, 'rx': 13}, 'depth': 5134, 'qubits': 11}\n",
+      "{'gate counts': {'gphase': 50, 't_dg': 1548, 'cx': 3515, 'u3': 750, 'x': 377, 'z': 12, 's': 70, 'cz': 150, 'ry': 2, 'p': 193, 's_dg': 70, 'h': 890, 'cy': 50, 't': 1173}, 'depth': 5134, 'qubits': 23}\n",
+      "(12, 17)\n"
+     ]
+    }
+   ],
    "source": [
     "BA_CKS = CKS(BA, eps=0.01, kappa=kappa)\n",
     "\n",
@@ -648,10 +760,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8c563103",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "QUANTUM SIMULATION via ``.inv(epsilon, kappa)``                                 \n",
+      " [0.02711946 0.55708127 0.5303461  0.63848102] \n",
+      "QUANTUM SIMULATION via CKS\n",
+      " [0.02711481 0.55709856 0.53035157 0.63846158] \n",
+      "CLASSICAL SOLUTION\n",
+      " [0.02944539 0.55423278 0.53013239 0.64102936]\n"
+     ]
+    }
+   ],
    "source": [
     "BA_inv = BA.inv(eps=0.01, kappa=kappa)\n",
     "\n",
@@ -694,10 +819,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "7751d0be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kappa =  2.3333333333333335\n",
+      "{'gate counts': {'gphase': 66, 't_dg': 724, 'cx': 2504, 'u3': 198, 'x': 197, 's': 262, 'p': 98, 's_dg': 64, 'h': 854, 't': 658, 'rx': 17, 'measure': 198}, 'depth': 1980, 'qubits': 12}\n",
+      "{'gate counts': {'gphase': 66, 't_dg': 724, 'cx': 2564, 'u3': 198, 'x': 167, 'z': 16, 's': 292, 'ry': 2, 'p': 158, 's_dg': 94, 'h': 914, 't': 658, 'measure': 198}, 'depth': 2013, 'qubits': 28}\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -750,10 +885,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a558ca4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.888050680045534e+16\n"
+     ]
+    }
+   ],
    "source": [
     "N = 8\n",
     "I = np.eye(N)\n",
@@ -774,10 +917,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "67e43944",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CKS parameters: j_0 = 4238761233361477632\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp.algorithms.cks import cks_params\n",
     "j_0, _ = cks_params(0.01, np.linalg.cond(L_ill))\n",
@@ -796,10 +947,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "6fba6fef",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.3333333333333335\n",
+      "CKS parameters: j_0 = 16\n"
+     ]
+    }
+   ],
    "source": [
     "print(np.linalg.cond(L_well))\n",
     "j_0, _ = cks_params(0.01, np.linalg.cond(L_well))\n",
@@ -830,10 +990,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "fc2235fc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{0.0: 0.7794808469587738, 1.0: 0.0504819881935866, 8.0: 0.05048196211655543, 2.0: 0.049593662951026754, 4.0: 0.04959364432457592, 12.0: 0.003275386174734787, 3.0: 0.003275384079259068, 9.0: 0.003269415698750819, 6.0: 0.0032556917297768676, 5.0: 0.0032142834997600667, 10.0: 0.0032142823356068897, 14.0: 0.00021251066185204556, 7.0: 0.000212510589092472, 13.0: 0.00021228250238125275, 11.0: 0.00021228221134295849, 15.0: 1.386597292418815e-05}\n"
+     ]
+    }
+   ],
    "source": [
     "from qrisp import *\n",
     "from qrisp.block_encodings import BlockEncoding\n",
