small corrections to CD tutorial and updated imprint

--- a/documentation/source/general/tutorial/CD.ipynb
+++ b/documentation/source/general/tutorial/CD.ipynb
@@ -15,10 +15,10 @@
     "## The concept of counterdiabatic driving\n",
     "\n",
     "To drive a system adiabatically, we must meet the adiabatic condition. The left side of the inequality describes the size of energy gaps $\\Delta = E_m - E_n$ of different states $\\ket{m}, \\ket{n}$ \n",
-    "compared the rate of change $ \\partial_{\\lambda} H(\\lambda)$ of the hamiltonian $H$ at times of the scheduling function $\\lambda(t) \\in \\left[0, 1\\right]$.\n",
+    "compared the rate of change $\\partial_{\\lambda} H(\\lambda)$ of the hamiltonian $H$ at times of the scheduling function $\\lambda(t) \\in \\left[0, 1\\right]$.\n",
     "\n",
     "$$ \\max_{n, m} \\left[ \\max_{\\lambda} \\bigg| \\frac{\n",
-    "    \\hbar \\dot{\\lambda} \\bra{m(\\lambda)} \\partial_{\\lambda} H(\\lambda) \\ket{n(\\lambda)}}\n",
+    "    \\hbar \\frac{\\partial \\lambda}{\\partial t} \\bra{m(\\lambda)} \\partial_{\\lambda} H(\\lambda) \\ket{n(\\lambda)}}\n",
     "    {(E_m(\\lambda) - E_n(\\lambda))^2} \\bigg| \\right] \\ll 1, m \\neq n $$\n",
     "\n",
     "The adiabatic condition roughly tells us that in order to avoid transitions to exited states we must drive the system slow compared to the size of the energetic gaps. Unfortunately, we cannot push this evolution time too strongly as this leads to quantum incoherences and disruption through noise.\n",
