--- a/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
+++ b/documentation/source/general/tutorial/BE_tutorial/BE_vol2.ipynb
@@ -745,7 +745,7 @@
     "\n",
     "The astute readers among you will notice that it is not **exactly** the same matrix $L$ we're inverting here, compared to the one in the previous tutorial. This is because the discrete Laplacian from the previous tutorial is ill-conditioned, meaning it condition number $\\kappa$ is enormous! We then use the trick to, instead, increase the values on the main diagonal of $L$, resulting in a lower condition number - it is well conditioned (hence the name ``L_well``, or $L_\\text{well}$ written fancier).\n",
     "\n",
-    "As a proof of concept as to just how ill-contitioned the original $L$ (let's first rename it to $L_\\text{ill}$ from the previous tutorial is, we welcome you to invert it using Numpy. Let's just show how large $\\kappa$ is for that pesky matrix:"
+    "As a proof of concept as to just how ill-conditioned the original $L$ (let's first rename it to $L_\\text{ill}$ from the previous tutorial) actually is, we welcome you to invert it using Numpy. Let's just show how large $\\kappa$ is for that pesky matrix:"
    ]
   },
   {
