minor changes to CD tutorial

--- a/documentation/source/general/tutorial/CD.ipynb
+++ b/documentation/source/general/tutorial/CD.ipynb
@@ -15,7 +15,7 @@
     "## The concept of counterdiabatic driving\n",
     "\n",
     "To drive a system adiabatically, we must meet the adiabatic condition. The left side of the inequality describes the size of energy gaps $\\Delta = E_m - E_n$ of different states $\\ket{m}, \\ket{n}$ \n",
-    "compared the rate of change $\\partial_{\\lambda} H(\\lambda)$ of the hamiltonian $H$ at times of the scheduling function $\\lambda(t) \\in \\left[0, 1\\right]$.\n",
+    "compared the rate of change $\\partial_{\\lambda} H(\\lambda)$ of the hamiltonian $H$ at times of the scheduling function $\\lambda(t) \\in \\left[0, 1\\right]$\n",
     "\n",
     "$$ \\max_{n, m} \\left[ \\max_{\\lambda} \\bigg| \\frac{\n",
     "    \\hbar \\frac{\\partial \\lambda}{\\partial t} \\bra{m(\\lambda)} \\partial_{\\lambda} H(\\lambda) \\ket{n(\\lambda)}}\n",
@@ -26,11 +26,11 @@
     "\n",
     "To understand how diabatic transitions can be mitigated, we need to introduce the adiabatic gauge potential $A_{\\lambda}$. This is a hermitian operator whose diagonal elements desribe the *adiabatic-*  and its off-diagonal elements describe the *non-adiabatic* dynamics of the driven system. It is related to the state evolution in the instantaneous eigenbasis (denoted by $\\sim$):\n",
     "\n",
-    "$$ i \\hbar \\frac{d\\ket{\\tilde{\\Psi}}}{dt} = \\left( \\tilde{H} - \\dot{\\lambda} A_{\\lambda} \\right) \\ket{\\tilde{\\Psi}} $$\n",
+    "$$ i \\hbar \\frac{d\\ket{\\tilde{\\Psi}}}{dt} = \\left( \\tilde{H} - \\frac{\\partial \\lambda}{\\partial t} A_{\\lambda} \\right) \\ket{\\tilde{\\Psi}} $$\n",
     "\n",
     "The idea behind counterdiabatic driving is to add a term to the hamiltonian that **counteracts the diabatic transitions** (hence the name). It turns out that this can be done by adding the negation of the AGP!\n",
     "\n",
-    "$$ H_{CD}(\\lambda) = H(\\lambda) + \\dot{\\lambda} A_{\\lambda}$$\n",
+    "$$ H_{CD}(\\lambda) = H(\\lambda) + \\frac{\\partial \\lambda}{\\partial t} A_{\\lambda}$$\n",
     "\n",
     "Since the exact calculation of the AGP becomes impossible very fast, we need to approximate $A_{\\lambda}$. This is the goal of local counterdiabatic driving (LCD) and counterdiabatic optimized local driving (COLD).\n",
     "\n",
@@ -97,7 +97,7 @@
     "So at $\\lambda(t)=1$ the state of our system is our minimal solution of the QUBO problem!\n",
     "To enforce adiabatic driving we now add the AGP approximation from our LCD approach as well as the COLD control hamiltonian. This way, we reach the complete COLD hamiltonian:\n",
     "\n",
-    "$$ H_{COLD} = H_{\\lambda}(t) +  \\dot{\\lambda} \\sum_i \\alpha_i(\\lambda, \\beta) \\mathcal{O}_{LCD} + f(\\lambda, \\beta) \\mathcal{O}_{opt}. $$\n",
+    "$$ H_{COLD} = H_{\\lambda}(t) +  \\frac{\\partial \\lambda}{\\partial t} \\sum_i \\alpha_i(\\lambda, \\beta) \\mathcal{O}_{LCD} + f(\\lambda, \\beta) \\mathcal{O}_{opt}. $$\n",
     "\n",
     "Note that the LCD coefficients $\\alpha_i$ depend on the optimization parameters $\\beta$ now."
    ]
